# Enigma-AI-Backend

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirement-dev.txt  requirement.txt
app/: main.py
app/api/v1/endpoints/: research.py
app/core/: config.py
app/db/: supabase_client.py
app/services/: vector_store.py
