[project]
name = "enigma ai backend"
version = "0.1.0"
description = "This is Enigma's Serverless AI Backend"
authors = [
    {name = "Godfred Opintan",email = "godfredopintan777@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "langchain (>=1.2.0,<2.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "langchain-google-genai (>=4.1.2,<5.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "supabase (>=2.27.0,<3.0.0)",
    "pinecone-client (>=6.0.0,<7.0.0)",
    "llama-parse (>=0.6.88,<0.7.0)",
    "e2b-code-interpreter (>=2.4.1,<3.0.0)",
    "tavily-python (>=0.7.17,<0.8.0)",
    "presidio-analyzer (>=2.2.360,<3.0.0)",
    "presidio-anonymizer (>=2.2.360,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "black (>=25.12.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
